# reportr

./: README.md  admin.yaml  app.py  index.html  pyproject.toml  run.py
static/: index.html  report.html
